#
# pyproject.toml
# Created by Perry Naseck on 6/28/21.
#
# Copyright (c) 2021, The CONIX Research Center
# All rights reserved.
#
# This source code is licensed under the BSD-3-Clause license found in the
# LICENSE file in the root directory of this source tree.
#

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "arenarobot/_version.py"
